<?xml version="1.0"?>
<package>
  <name>create2_joystick_control</name>
  <version>0.0.0</version>
  <description>iRobot Create2 Joystick Control</description>

  <maintainer email="roomba@todo.todo">roomba</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>create2_msgs</build_depend>
  <build_depend>joy</build_depend>

  <run_depend>create2_msgs</run_depend>
  <run_depend>joy</run_depend>

  <export>
  </export>
</package>
